<resources>
    <string name="app_name">BeautyProgram</string>
    <string name="logIn">Log In</string>
    <string name="butlogIn">Log in</string>
    <string name="butReg">Register</string>
    <string name="butGuest">Log in as a Guest</string>
    <string name="login">Login</string>
    <string name="manicTit">Manicure</string>
    <string name="manicEur">European</string>
    <string name="manicHard">Hardware</string>
    <string name="manicClas">Classic</string>
    <string name="manicComb">Combined</string>
    <string name="pass">Password</string>
    <string name="urgent">Urgent</string>
    <string name="all">All</string>
    <string name="update">Update</string>
    <string name="service">Service:</string>
    <string name="priceService">Price:</string>
    <string name="price">Price</string>
    <string name="schDate">Scheduled date:</string>
    <string name="date">Date</string>
    <string name="schTime">Scheduled time:</string>
    <string name="time">Time</string>
    <string name="uan">UAN</string>
    <string name="succes">Order successfully created!</string>
    <string name="photo">Your photo</string>
    <string name="no_account">Sorry, you are not registered. Please login as a guest or register.</string>
    <string name="wishes">Here you can specify your wishes...</string>
    <string name="equiMaster">Master`s</string>
    <string name="dataText">__ __.__ __.__ __ __ __</string>
    <string name="timeText">__ __:__ __</string>
    <string name="cancelReq">Cancel request</string>
    <string name="sendReq">Send a request</string>
    <string name="address">Address:</string>
    <string name="addr">address</string>
    <string name="resp">Respond</string>
    <string name="map">Map</string>
    <string name="makeEvening">Evening</string>
    <string name="makeBored">Bored</string>
    <string name="makeClassic">Classic</string>
    <string name="makeInvoice">Invoice</string>
    <string name="makeTheatrical">Theatrical</string>
    <string name="change">Change</string>
    <string name="details">Details:</string>
    <string name="detailsText">details</string>
    <string name="equip">Equipment:</string>
    <string name="suggestPrice">Suggested price:</string>
    <string name="equipChoose">equipment</string>
    <string name="prevRecord">Previous</string>
    <string name="nextRecord">Next</string>
    <string name="phoneNumb">Phone number:</string>
    <string name="numb">+380 (**)-***-**-**</string>
    <string name="typeOfService">Type of service</string>
    <string name="customName">Client name</string>
    <string name="orderSMS">Orders will be displayed here.</string>
    <string name="personalOrd">Here are your personal orders.</string>
    <string name="mastersCl">All registered masters will be displayed here.</string>
    <string name="no_input_login">Please enter your personal login!</string>
    <string name="no_input_pass">Please enter your password!</string>
    <string name="back">Cancel</string>
    <string name="createAcc">Create an account</string>
    <string name="createWizAcc">Creating a Master account</string>
    <string name="createClientAcc">Creating a Client account</string>
    <string name="name">Name</string>
    <string name="orderBut">Order</string>
    <string name="created">Account created! You can log in with your username and password.</string>
    <string name="myMasters">My masters</string>
    <string name="myReviews">My feedback</string>
    <string name="myGrades">My grades</string>
    <string name="surname">Surname</string>
    <string name="manic">Manicure</string>
    <string name="make">Makeup</string>
    <string name="hair">Hairstyle</string>
    <string name="massage">Massage</string>
    <string name="quect">What type of service is required?</string>
    <string name="range">Range</string>
    <string name="status">Status</string>
    <string name="statusW">Status:</string>
    <string name="add">Add</string>
    <string name="backOn">Back</string>
    <string name="Odessa">Odessa</string>
    <string name="worksDispl">Your work will be displayed here!</string>
    <string name="makeupMaster">Make-up master</string>
    <string name="fieldAct">Field of activity:</string>
    <string name="Wnumber">Phone number:</string>
    <string name="specialAc">Special achievements:</string>
    <string name="quest">What account do you want to create?</string>
    <string name="email">E-mail</string>
    <string name="myWorks">My works:</string>
    <string name="masterR">Master</string>
    <string name="masters">Masters</string>
    <string name="city">City</string>
    <string name="free">Free</string>
    <string name="order">Order a service</string>
    <string name="clientR">Client</string>
    <string name="number">Phone number</string>
    <string name="profile">My profile</string>
    <string name="orders">My orders</string>
    <string name="exit">Exit</string>
    <string name="freeOrders">Free orders</string>
    <string name="welcome">Welcome!</string>
    <string name="about">About the application</string>
    <string name="title_activity_wizard_profile">WizardProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>