<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4DCDC"
    tools:context=".forClient.WindowOrderManic">

    <Button
        android:id="@+id/buttonSendRec2"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="26dp"
        android:text="@string/sendReq"
        app:backgroundTint="#519F59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancelRec2"
        app:layout_constraintTop_toBottomOf="@+id/switchUrg2" />

    <Button
        android:id="@+id/buttonCancelRec2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="29dp"
        android:onClick="backOnOrderList"
        android:text="@string/cancelReq"
        app:backgroundTint="#AF5454"
        app:layout_constraintEnd_toStartOf="@+id/buttonSendRec2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchUrg2" />

    <Switch
        android:id="@+id/switchUrg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/urgent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/wishes"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/textViewTime14"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2" />

    <TextView
        android:id="@+id/textViewTime14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/details"
        android:textColor="#191818"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime12" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/timeText"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textViewTime12"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate3" />

    <TextView
        android:id="@+id/textViewTime12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/time"
        android:textColor="#191818"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime11" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/dataText"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textViewTime11"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEquipChosse2" />

    <TextView
        android:id="@+id/textViewTime11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/date"
        android:textColor="#191818"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime10" />

    <Spinner
        android:id="@+id/spinnerEquipChosse2"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/equiMaster"
        app:layout_constraintStart_toEndOf="@+id/textViewTime10"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAddress2" />

    <TextView
        android:id="@+id/textViewTime10"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/equip"
        android:textColor="#191818"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAddress2" />

    <EditText
        android:id="@+id/editTextTextAddress2"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Order address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTime9"
        app:layout_constraintTop_toBottomOf="@+id/spinnerValute2" />

    <TextView
        android:id="@+id/textViewTime9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/address"
        android:textColor="#191818"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Spinner
        android:id="@+id/spinnerValute2"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/uan"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEven5" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEven5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/priceService"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEven3" />

    <CheckBox
        android:id="@+id/checkBoxEven5"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manicHard"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEven4"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manicEur"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEven3"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manicComb"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEven2" />

    <CheckBox
        android:id="@+id/checkBoxEven2"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manicClas"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/manicTit"
        android:textColor="#AC09C8"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>