<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDCDCD"
    android:contentDescription="@string/photo"
    tools:context=".forClient.ClientProfile">

    <Button
        android:id="@+id/buttonCExit"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="44dp"
        android:background="#7FE6DE"
        android:onClick="backOnClientAcc"
        android:text="@string/backOn"
        android:textColor="#37474E"
        android:textSize="16sp"
        app:backgroundTint="#F16E7D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGrad"
        android:layout_width="191dp"
        android:layout_height="61dp"
        android:layout_marginBottom="69dp"
        android:text="@string/myGrades"
        android:textSize="16sp"
        app:backgroundTint="#A186C1"
        app:layout_constraintBottom_toTopOf="@+id/buttonCExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRev"
        android:layout_width="187dp"
        android:layout_height="63dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClFeedb"
        android:text="@string/myReviews"
        android:textSize="16sp"
        app:backgroundTint="#7BBF84"
        app:layout_constraintBottom_toTopOf="@+id/buttonGrad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCity2"
        android:layout_width="46dp"
        android:layout_height="25dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/city"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCity2"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/Odessa"
        app:layout_constraintBottom_toTopOf="@+id/buttonMast"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewC"
        android:layout_width="142dp"
        android:layout_height="141dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewCName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textColor="#814EBF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewC"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMast"
        android:layout_width="184dp"
        android:layout_height="64dp"
        android:layout_marginBottom="30dp"
        android:text="@string/myMasters"
        android:textSize="16sp"
        app:backgroundTint="#7493A1"
        app:layout_constraintBottom_toTopOf="@+id/buttonRev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>